--- a/pkg/controller/acmeorders/BUILD.bazel
+++ b/pkg/controller/acmeorders/BUILD.bazel
@@ -13,8 +13,10 @@ go_library(
     deps = [
         "//pkg/acme:go_default_library",
         "//pkg/acme/client:go_default_library",
+        "//pkg/apis/acme/v1alpha2:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
+        "//pkg/client/listers/acme/v1alpha2:go_default_library",
         "//pkg/client/listers/certmanager/v1alpha2:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/acmeorders/selectors:go_default_library",
@@ -65,6 +67,7 @@ go_test(
     deps = [
         "//pkg/acme/client:go_default_library",
         "//pkg/acme/fake:go_default_library",
+        "//pkg/apis/acme/v1alpha2:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller/test:go_default_library",
