--- a/pkg/issuer/acme/BUILD.bazel
+++ b/pkg/issuer/acme/BUILD.bazel
@@ -39,6 +39,7 @@ go_test(
     deps = [
         "//pkg/acme/client:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//vendor/k8s.io/utils/clock/testing:go_default_library",
     ],
