--- a/pkg/internal/apis/acme/v1alpha2/BUILD.bazel
+++ b/pkg/internal/apis/acme/v1alpha2/BUILD.bazel
@@ -14,7 +14,9 @@ go_library(
     deps = [
         "//pkg/apis/acme:go_default_library",
         "//pkg/apis/acme/v1alpha2:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
         "//pkg/internal/apis/acme:go_default_library",
+        "//pkg/internal/apis/meta:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
