--- a/deploy/charts/cert-manager/templates/webhook-service.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-service.yaml
@@ -15,7 +15,7 @@ spec:
   ports:
   - name: https
     port: 443
-    targetPort: 6443
+    targetPort: {{ .Values.webhook.securePort }}
   selector:
     app: {{ include "webhook.name" . }}
     app.kubernetes.io/name: {{ include "webhook.name" . }}
