Enable PodSecurityPolicies in end-to-end tests
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/test/fixtures/kind/config-v1alpha2.yaml
+++ b/test/fixtures/kind/config-v1alpha2.yaml
@@ -18,5 +18,7 @@ kubeadmConfigPatches:
       baseConfig:
         clusterDNS:
         - 10.0.0.10
+    featureGates:
+      PodSecurityPolicy: true
 nodes:
 - role: control-plane
