Revert "Add update permission on certificaterequests/finalizers to cert-manager-controller-certificates cluster role"
This reverts commit dcd1f9fc014ebb72c597a765ab4064c89af3b292.

--- a/deploy/charts/cert-manager/templates/rbac.yaml
+++ b/deploy/charts/cert-manager/templates/rbac.yaml
@@ -121,7 +121,7 @@ rules:
   # admission controller enabled:
   # https://kubernetes.io/docs/reference/access-authn-authz/admission-controllers/#ownerreferencespermissionenforcement
   - apiGroups: ["cert-manager.io"]
-    resources: ["certificates/finalizers", "certificaterequests/finalizers"]
+    resources: ["certificates/finalizers"]
     verbs: ["update"]
   - apiGroups: ["acme.cert-manager.io"]
     resources: ["orders"]
