--- a/deploy/manifests/00-crds.yaml
+++ b/deploy/manifests/00-crds.yaml
@@ -3257,11 +3257,10 @@ spec:
                       - secretRef
                       properties:
                         mountPath:
-                          description: The value here will be used as part of the
-                            path used when authenticating with vault, for example
-                            if you set a value of "foo", the path used will be `/v1/auth/foo/login`.
-                            If unspecified, the default value "kubernetes" will be
-                            used.
+                          description: The vault here is the path to use when authenticating
+                            with vault, for example setting a value to `/v1/auth/foo/login`.
+                            If unspecified, the default value "/v1/auth/kubernetes/login"
+                            will be used.
                           type: string
                         role:
                           description: A required field containing the Vault Role
@@ -4912,11 +4911,10 @@ spec:
                       - secretRef
                       properties:
                         mountPath:
-                          description: The value here will be used as part of the
-                            path used when authenticating with vault, for example
-                            if you set a value of "foo", the path used will be `/v1/auth/foo/login`.
-                            If unspecified, the default value "kubernetes" will be
-                            used.
+                          description: The vault here is the path to use when authenticating
+                            with vault, for example setting a value to `/v1/auth/foo/login`.
+                            If unspecified, the default value "/v1/auth/kubernetes/login"
+                            will be used.
                           type: string
                         role:
                           description: A required field containing the Vault Role
