Mark 'csr' field as required in CertificateRequest
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/charts/cert-manager/crds/certificaterequests.yaml
+++ b/deploy/charts/cert-manager/crds/certificaterequests.yaml
@@ -56,6 +56,7 @@ spec:
           description: CertificateRequestSpec defines the desired state of CertificateRequest
           type: object
           required:
+          - csr
           - issuerRef
           properties:
             csr:
