deploy/charts/cert-manager: explicitly define ContainerPort protocol
Server-side apply currently needs it to resolve conflicts.

Signed-off-by: Bouke van der Bijl <bvanderbijl@digitalocean.com>

--- a/deploy/charts/cert-manager/templates/deployment.yaml
+++ b/deploy/charts/cert-manager/templates/deployment.yaml
@@ -85,6 +85,7 @@ spec:
           - --webhook-dns-names={{ include "webhook.fullname" . }},{{ include "webhook.fullname" . }}.{{ .Release.Namespace }},{{ include "webhook.fullname" . }}.{{ .Release.Namespace }}.svc
           ports:
           - containerPort: 9402
+            protocol: TCP
           env:
           - name: POD_NAMESPACE
             valueFrom:
