--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -42,6 +42,7 @@ filegroup(
         "//pkg/util/feature:all-srcs",
         "//pkg/util/kube:all-srcs",
         "//pkg/util/pki:all-srcs",
+        "//pkg/util/profiling:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
