--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -77,6 +77,10 @@ securityContext:
   fsGroup: 1001
   runAsUser: 1001
 
+volumes: []
+
+volumeMounts: []
+
 deploymentAnnotations: {}
 
 podAnnotations: {}
