Add configuration switch for use of apparmor in PSP
Fixes #2293

Signed-off-by: Christian Zunker <christian.zunker@codecentric.cloud>

--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -16,6 +16,7 @@ global:
 
   podSecurityPolicy:
     enabled: false
+    useAppArmor: true
 
   # Set the verbosity of cert-manager. Range of 0 - 6 with 6 being the most verbose.
   logLevel: 2
