--- a/pkg/controller/certificaterequests/vault/BUILD.bazel
+++ b/pkg/controller/certificaterequests/vault/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//pkg/internal/vault:go_default_library",
         "//pkg/issuer:go_default_library",
         "//pkg/logs:go_default_library",
+        "//pkg/util/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
     ],
@@ -46,6 +47,7 @@ go_test(
         "//pkg/controller/test:go_default_library",
         "//pkg/internal/vault:go_default_library",
         "//pkg/internal/vault/fake:go_default_library",
+        "//pkg/util/errors:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
