--- a/pkg/internal/vault/BUILD.bazel
+++ b/pkg/internal/vault/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//pkg:__subpackages__"],
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/util/errors:go_default_library",
         "//pkg/util/pki:go_default_library",
         "@com_github_hashicorp_vault//api:go_default_library",
         "@com_github_hashicorp_vault//helper/certutil:go_default_library",
