--- a/deploy/BUILD.bazel
+++ b/deploy/BUILD.bazel
@@ -24,6 +24,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//deploy/charts/cert-manager:all-srcs",
+        "//deploy/charts/cert-manager-crds:all-srcs",
         "//deploy/manifests:all-srcs",
     ],
     tags = ["automanaged"],
